# Causal-Machine-Learning

./: .pre-commit-config.yaml  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg  tree.dot
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: causalmachinelearning.tex  causalmachinelearning_pres.tex  task_paper.py
src/causalmachinelearning/: __init__.py
src/causalmachinelearning/analysis/: task_analysis.py
src/causalmachinelearning/data_management/: A_Machine_learning_basics.py  B_Ridge_and_lasso.py  C_Neural_networks.py  D_Decision_trees.py  E_Ensemble_learning.py  F_Heterogeneous_treatment_effects.py  G_Treatment_effect_estimators.py  H_Meta_learners.py  I_Double_machine_learning.py  J_Diff_and_diff_and_ml.py  _Backup_E_Ensemble_learning.py  _Backup_task_E_Ensemble_learning.py  __init__.py  task_A_Machine_learning_basics.py  task_B_Ridge_and_lasso.py  (+10 more)
tests/data_management/: test_A_Machine_learning_basics.py  test_B_Ridge_and_Lasso.py  test_C_Neural_networks.py  test_D_Decison_trees.py  test_E_Ensemble_learning.py  test_F_Heterogeneous_treatment.py  test_G_Treatment_effect_estimators.py  test_H_Meta_learners.py  test_I_Double_machine_learning.py  test_J_Diff_in_diff_and_ml.py
tests/lessons/: test_A_Machine_learning_basics.py  test_B_Ridge_and_Lasso.py  test_C_Neural_networks.py  test_D_Decison_trees.py  test_E_Ensemble_learning.py  test_F_Heterogeneous_treatment.py  test_G_Treatment_effect_estimators.py  test_H_Meta_learners.py  test_I_Double_machine_learning.py  test_J_Diff_in_diff_and_ml.py
(+24 files in other folders)
