[metadata]
name = causalmachinelearning
description = causalmachinelearning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maxmuellerecon/causalmachinelearning
author = Max Mueller
author_email = max.mueller@uni-bonn.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/maxmuellerecon/causalmachinelearning
    Documentation = https://github.com/maxmuellerecon/causalmachinelearning
    Github = https://github.com/maxmuellerecon/causalmachinelearning
    Tracker = https://github.com/maxmuellerecon/causalmachinelearning/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/causalmachinelearning/_version.py
